Simplify opening animation code and make sure it works correctly on mobile

--- a/frontend/src/components/Hero/Hero.module.css
+++ b/frontend/src/components/Hero/Hero.module.css
@@ -6,6 +6,7 @@
   padding: 0 3rem;
   position: relative;
   width: 100%;
+  user-select: none;
 
   @media (max-width: 1260px) {
     padding: 0;
@@ -18,64 +19,21 @@
   color: hsla(80, 3%, 96%, 24%);
   cursor: default;
   font-size: 248px;
-  height: 192px;
+  height: 212px;
   letter-spacing: 9px;
+  line-height: 212px;
   /* Make the browser accelerate graphics to prevent text being blurred on Safari */
   transform: translate3d(0, 0, 1px);
-  user-select: none;
 
   @media (max-width: 1260px) {
     font-size: 19.17vw;
-    height: 15vw;
+    height: 16.5vw;
     letter-spacing: 0.79vw;
+    line-height: 16.5vw;
   }
 
-  & .headingAnimated {
-    transform: translateY(-1.12rem);
-
-    @media (max-width: 1260px) {
-      transform: translateY(-1.6vw);
-    }
-  }
-
-  /* Normalize font rendering on Firefox */
-  &.glassyHeadingFirefox {
-    font-size: 248px;
-    height: 213px;
-
-    @media (max-width: 1260px) {
-      font-size: 19.05vw;
-      height: 16.6vw;
-      letter-spacing: 0.79vw;
-    }
-
-    & .headingAnimated {
-      transform: translateY(-1.71rem);
-
-      @media (max-width: 1260px) {
-        transform: translateY(-2.395vw);
-      }
-    }
-  }
-
-  /* Normalize font rendering on Safari */
-  &.glassyHeadingSafari {
-    font-size: 238px;
-    height: 208px;
-
-    @media (max-width: 1260px) {
-      font-size: 18.85vw;
-      height: 16.2vw;
-      letter-spacing: 0.79vw;
-    }
-
-    & .headingAnimated {
-      transform: translateY(-1.615rem);
-
-      @media (max-width: 1260px) {
-        transform: translateY(-2.28vw);
-      }
-    }
+  @media (max-width: 740px) {
+    color: hsla(84, 6%, 96%, 27%);
   }
 }
 
@@ -87,22 +45,23 @@
     backdrop-filter: blur(13px) saturate(250%);
     background-color: hsla(80, 3%, 96%, 24%);
     clip-path: url(#lockup-headline-mask-path);
+
+    @media (max-width: 740px) {
+      background-color: hsla(84, 6%, 96%, 27%);
+    }
   }
 }
 
 .glassyHeadingAnimated {
   position: absolute;
   top: 0;
+  width: 100%;
 }
 
 .headingAnimated {
   display: block;
   white-space: nowrap;
   width: 100%;
-
-  @media (max-width: 1260px) {
-    transform: translateY(-1.6vw);
-  }
 }
 
 .headingLetterAnimatedWrapper {
@@ -133,7 +92,6 @@
   letter-spacing: 15px;
   margin-top: 2rem;
   text-transform: uppercase;
-  user-select: none;
 
   @media (max-width: 1168px) {
     color: var(--grey-500);
@@ -163,7 +121,7 @@
 .roleLetterWrapper {
   display: inline-block;
   overflow: hidden;
-  vertical-align: bottom;
+  vertical-align: text-bottom;
 }
 
 .roleLetter {
