--- a/frontend/src/css/_base.css
+++ b/frontend/src/css/_base.css
@@ -4,11 +4,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap");
 
 /* Font: Druk Cyr */
+/* Don't use unicode-range to ensure the same font alignment across browsers */
 @font-face {
   font-family: "Druk Cyr";
   src: url("/fonts/DrukCyr-Bold.woff2") format("woff2");
   font-display: swap;
-  unicode-range: U+0025-00FF;
 }
 
 /* Fallback font for Druk Cyr: Impact */
